--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-logo: <img src="/assets/img/DPS.jpg"> Dead Packet Society # add logo name
+logo: /assets/img/DPS.jpg # add logo name
 title: Dead Packet Society
 description: > # this means to ignore newlines until "baseurl:"
+  A collective of packet enthusiasts researching various forms of data in motion.
   Network analysis, packet dissection, protocol reverse engineering, and software defined radio
-tagline: A collective of packet enthusiasts researching various forms of data in motion.
+tagline: Even dead packets can tell tales.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://deadpacketsociety.github.io" # the base hostname & protocol for your site, e.g. http://example.com
