--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
+destination: docs
 plugins_dir: [_plugins]
 plugins: [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
