--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: /assets/img/DPS.jpg # add logo name
+logo: /assets/img/DPS.png # add logo name
 title: Dead Packet Society
 description: > # this means to ignore newlines until "baseurl:"
   A collective of packet enthusiasts researching various forms of data in motion.
